--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,86 +1,102 @@
-- name: Install Python development libs
+- name: Install build essentials for ubuntu
   apt:
-    name: python-dev
+    name: build-essential
     state: present
 
-- name: Install Python (3.6) development libs
+- name: Install gedit text editor
   apt:
-    name: python3.6-dev
+    name: gedit
     state: present
 
-- name: Install httpie cli
-  pip:
-    name: httpie
+- name: Intall file-roller archive manager
+  apt:
+    name: file-roller
     state: present
 
-- name: Install AWS cli
-  pip:
-    name: awscli
-    version: 1.11.130
+- name: Install bash completion
+  apt:
+    name: bash-completion
     state: present
 
-# https://github.com/ansible/ansible/issues/20492#issuecomment-274081101
-- name: Install docker compose
-  pip:
-    name: docker-compose
-    version: 1.9.0
-    state: present
-
-# check if mongodb-compass installed
-- name: Check mongodb compass Installed
-  shell: which mongodb-compass
-  register: compass_check
+- name: Check Gyazo installed
+  shell: which gyazo
+  register: gyazo_check
   ignore_errors: True
 
-- name: Install mongodb compass
+# instructions taken from gyazo for linux
+# https://github.com/gyazo/Gyazo-for-Linux
+- name: Install Gyazo
   shell: |
-    wget -O /tmp/compass.deb https://downloads.mongodb.com/compass/mongodb-compass_1.11.1_amd64.deb
-    dpkg --install /tmp/compass.deb
-    rm -rf /tmp/compass.deb
-  when: compass_check.rc == 1
+    curl -s https://packagecloud.io/install/repositories/gyazo/gyazo-for-linux/script.deb.sh | sudo bash
+    apt-get install gyazo -y
+  when: gyazo_check.rc == 1
 
-  # check if sqlectron installed
-- name: Check sqlectron Installed
-  shell: which sqlectron
-  register: sqlectron_check
-  ignore_errors: True
+- name: Install i3
+  apt:
+    name: i3
+    state: present
 
-- name: Install sqlectron
-  shell: |
-    wget -O /tmp/sqlectron.deb https://github.com/sqlectron/sqlectron-gui/releases/download/v1.29.0/Sqlectron_1.29.0_amd64.deb
-    dpkg --install /tmp/sqlectron.deb
-    rm -rf /tmp/sqlectron.deb
-  when: sqlectron_check.rc == 1
+- name: Install i3blocks
+  apt:
+    name: i3blocks
+    state: present
 
-- name: Install Code Extensions
-  shell: |
-    code --install-extension ms-python.python
-    code --install-extension EditorConfig.EditorConfig
-    code --install-extension abusaidm.html-snippets
-    code --install-extension arcticicestudio.nord-visual-studio-code
-    code --install-extension christian-kohler.npm-intellisense
-    code --install-extension christian-kohler.path-intellisense
-    code --install-extension dbaeumer.vscode-eslint
-    code --install-extension dzannotti.vscode-babel-coloring
-    code --install-extension eg2.vscode-npm-script
-    code --install-extension PKief.material-icon-theme
-    code --install-extension formulahendry.terminal
-    code --install-extension hnw.vscode-auto-open-markdown-preview
-    code --install-extension jasonnutter.search-node-modules
-    code --install-extension marcostazi.VS-code-vagrantfile
-    code --install-extension octref.vetur
-    code --install-extension waderyan.nodejs-extension-pack
-    code --install-extension xabikos.JavaScriptSnippets
-    code --install-extension zhuangtongfa.Material-theme
-    code --install-extension dracula-theme.theme-dracula
-    code --install-extension Equinusocio.vsc-material-theme
-    code --install-extension raashida.fixthecode-vs
-    code --install-extension lextudio.restructuredtext
-    code --install-extension loiane.ts-extension-pack
-    code --install-extension wesbos.theme-cobalt2
-    code --install-extension josef.rouge-theme
-    code --install-extension eamodio.gitlens
-    code --install-extension formulahendry.auto-close-tag
-    code --install-extension wayou.vscode-todo-highlight
+- name: Install nitogren
+  apt:
+    name: nitrogen
+    state: present
+
+- name: Install audio control for i3 - pavu
+  apt:
+    name: pavucontrol
+    state: present
+    
+- name: Install tmux
+  apt:
+    name: tmux
+    state: present
+
+- name: Install zsh
+  apt:
+    name: zsh
+    state: present
+
+- name: Disable chsh authentication
+  lineinfile:
+    dest: /etc/pam.d/chsh
+    regexp: '.*pam_shells\.so'
+    line: 'auth sufficient  pam_shells.so'
+
+- name: Install oh-my-zsh
+  shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
   become: False
-  ignore_errors: True
+
+- name: Re-enable chsh authentication
+  lineinfile:
+    dest: /etc/pam.d/chsh
+    regexp: '.*pam_shells\.so'
+    line: 'auth required  pam_shells.so'
+
+ name: Clone dotfiles
+  git:
+    repo: https://github.com/neetjn/dotfiles.git
+    dest: /tmp/dotfiles
+    version: master
+
+- name: Copy dotfiles
+  shell: |
+    chown -R "{{host_username}}" /tmp/dotfiles/
+    cp -r /tmp/dotfiles/* "{{home_directory}}"
+    cp -r /tmp/dotfiles/.* "{{home_directory}}"
+    rm -rf "{{home_directory}}/.git"
+  ignore_errors: yes
+
+- name: Install jq
+  apt:
+    name: jq
+  state: present
+
+- name: Install snapd
+  apt:
+    name: snapd
+    state: present
